--- a/.ci_support/linux_64_cuda_compiler_version10.2python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_cuda_compiler_version10.2python3.8.____cpython.yaml
@@ -8,12 +8,16 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
+cuda_compiler_version:
+- '10.2'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-cuda:10.2
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -25,5 +29,6 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-- - cdt_name
+- - cuda_compiler_version
+  - cdt_name
   - docker_image
