--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  skip: true                                                  # [osx or win or cuda_compiler_version in (undefined, 'None')]
+  skip: true                                                  # [win or cuda_compiler_version in (undefined, 'None')]
   script: "{{ PYTHON }} -m pip install . -vv"
 
   missing_dso_whitelist:
@@ -26,16 +26,16 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ compiler('cuda') }}                                  # [linux64 and cuda_compiler_version not in (undefined, 'None')]
+    - {{ compiler('cuda') }}                                  # [linux and cuda_compiler_version not in (undefined, 'None')]
   host:
     - python
     - pip
     - sparsehash
-    - pytorch-cpu                                             # [osx or cuda_compiler_version in (undefined, 'None')]
+    - pytorch-cpu                                             # [cuda_compiler_version in (undefined, 'None')]
     - pytorch-gpu                                             # [cuda_compiler_version not in (undefined, 'None')]
   run:
     - python
-    - {{ pin_compatible('pytorch-cpu', max_pin='x.x.x') }}    # [osx or cuda_compiler_version in (undefined, 'None')]
+    - {{ pin_compatible('pytorch-cpu', max_pin='x.x.x') }}    # [cuda_compiler_version in (undefined, 'None')]
     - {{ pin_compatible('pytorch-gpu', max_pin='x.x.x') }}    # [cuda_compiler_version not in (undefined, 'None')]
 
 test:
