--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
 {% set name = "torchsparse" %}
+{% set number = 5 %}
 {% set version = "1.3.0" %}
 
 package:
@@ -8,35 +9,35 @@ package:
 source:
   url: https://github.com/mit-han-lab/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: 6fa80a875eb2bfa74a69dd1b8e64df1b699710d07c072ca504d4f25fbbcb8730
+  patches: atomic-add.patch
 
 build:
-  number: 4
-  skip: true                                                  # [win]
-  script: "{{ PYTHON }} -m pip install . -vv"
+  number: {{ number }}
+#   skip: true  # [win]
 
-  missing_dso_whitelist:
-    - "$RPATH/libc10.so"
-    - "$RPATH/libtorch_cpu.so"
-    - "$RPATH/libtorch_python.so"
-    - /lib/libstdc++.so.6
-    - /lib*/libgcc_s.so.1
-    - /lib*/libc.so.6
+#   missing_dso_whitelist:
+#     - "$RPATH/libc10.so"
+#     - "$RPATH/libtorch_cpu.so"
+#     - "$RPATH/libtorch_python.so"
+#     - /lib/libstdc++.so.6
+#     - /lib*/libgcc_s.so.1
+#     - /lib*/libc.so.6
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ compiler('cuda') }}                                  # [linux64 and cuda_compiler_version not in (undefined, 'None')]
+    - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version not in (undefined, 'None')]
   host:
     - python
     - pip
     - sparsehash
-    - pytorch-cpu                                             # [cuda_compiler_version in (undefined, 'None')]
-    - pytorch-gpu                                             # [cuda_compiler_version not in (undefined, 'None')]
+    - pytorch-cpu  # [cuda_compiler_version in (undefined, 'None')]
+    - pytorch-gpu  # [cuda_compiler_version not in (undefined, 'None')]
   run:
     - python
-    - {{ pin_compatible('pytorch-cpu', max_pin='x.x.x') }}    # [cuda_compiler_version in (undefined, 'None')]
-    - {{ pin_compatible('pytorch-gpu', max_pin='x.x.x') }}    # [cuda_compiler_version not in (undefined, 'None')]
+    - {{ pin_compatible('pytorch-cpu', max_pin='x.x.x') }}  # [cuda_compiler_version in (undefined, 'None')]
+    - {{ pin_compatible('pytorch-gpu', max_pin='x.x.x') }}  # [cuda_compiler_version not in (undefined, 'None')]
 
 test:
   imports:
