--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,8 +29,8 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != 'None']
-    - pytorch-cpu  # [cuda_compiler_version == 'None' && build_platform != target_platform]
-    - pytorch-gpu  # [cuda_compiler_version != 'None' && build_platform != target_platform]
+    - pytorch-cpu  # [cuda_compiler_version == 'None' and build_platform != target_platform]
+    - pytorch-gpu  # [cuda_compiler_version != 'None' and build_platform != target_platform]
   host:
     - python
     - pip
