--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,10 +30,10 @@ requirements:
     - python
     - pip
     - sparsehash
-    - pytorch-cpu
+    - pytorch
   run:
     - python
-    - {{ pin_compatible('pytorch-cpu', max_pin='x.x.x') }}
+    - {{ pin_compatible('pytorch', max_pin='x.x.x') }}
 
 test:
   imports:
