--- a/.ci_support/linux_64_c_compiler_version9cuda_compiler_version11.2cxx_compiler_version9python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version9cuda_compiler_version11.2cxx_compiler_version9python3.7.____cpython.yaml
@@ -1,9 +1,9 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '7'
+- '9'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,13 +11,13 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- None
+- '11.2'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '7'
+- '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-cuda:11.2
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -29,6 +29,6 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-- - cdt_name
   - cuda_compiler_version
+  - cdt_name
   - docker_image
