--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,12 +25,12 @@ requirements:
     - python
     - pip
     - sparsehash
-    - pytorch-cpu 1.10.0  # [cuda_compiler_version == "None"]
-    - pytorch-gpu 1.10.0  # [cuda_compiler_version != "None"]
+    - pytorch-cpu  # [cuda_compiler_version == "None"]
+    - pytorch-gpu  # [cuda_compiler_version != "None"]
   run:
     - python
-    - {{ pin_compatible('pytorch-cpu', min_pin='x.x.x', max_pin='x.x') }}  # [cuda_compiler_version == "None"]
-    - {{ pin_compatible('pytorch-gpu', min_pin='x.x.x', max_pin='x.x') }}  # [cuda_compiler_version != "None"]
+    - pytorch-cpu  # [cuda_compiler_version == "None"]
+    - pytorch-gpu  # [cuda_compiler_version != "None"]
 
 test:
   imports:
