--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,11 @@
 {% set name = "torchsparse" %}
-{% set number = 7 %}
+{% set number = 8 %}
 {% set version = "1.4.0" %}
+
+# waiting for https://github.com/conda-forge/conda-forge-pinning-feedstock/pull/1890
+{% set pytorch_version = "1.10.0" %}
+# see github.com/conda-forge/conda-forge.github.io/issues/1059 for naming discussion
+{% set torch_proc_type = "cuda" if cuda_compiler_version != "None" else "cpu" %}
 
 package:
   name: {{ name|lower }}
@@ -12,27 +17,33 @@ source:
 
 build:
   number: {{ number }}
-  skip: true  # [win]
+  skip: true  # [win or osx or cuda_compiler_version == "None" or cuda_compiler_version == "10.2"]
+  string: py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version == "None"]
+  string: py{{ CONDA_PY }}cuda{{ cuda_compiler_version|replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version != "None"]
+  run_exports:
+    # ensure matching proc-type
+    - torchvision =*=*_{{ torch_proc_type }}
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - python  # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != 'None']
-    - pytorch-cpu  # [cuda_compiler_version == 'None' and build_platform != target_platform]
-    - pytorch-gpu  # [cuda_compiler_version != 'None' and build_platform != target_platform]
+    - sysroot_linux-64 ==2.17  # [linux64]
+    - pytorch ={{ pytorch_version }}={{ torch_proc_type }}*  # [build_platform != target_platform]
   host:
     - python
     - pip
     - sparsehash
-    - pytorch-cpu  # [cuda_compiler_version == 'None']
-    - pytorch-gpu  # [cuda_compiler_version != 'None']
+    - pytorch {{ pytorch_version }}
+    - pytorch-cpu  # [cuda_compiler_version == "None"]
+    - pytorch-gpu  # [cuda_compiler_version != "None"]
   run:
     - python
-    - pytorch-cpu  # [cuda_compiler_version == 'None']
-    - pytorch-gpu  # [cuda_compiler_version != 'None']
+    - pytorch-cpu  # [cuda_compiler_version == "None"]
+    - pytorch-gpu  # [cuda_compiler_version != "None"]
 
 test:
   imports:
