--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,6 @@
 {% set name = "torchsparse" %}
-{% set number = 8 %}
 {% set version = "1.4.0" %}
 
-# waiting for https://github.com/conda-forge/conda-forge-pinning-feedstock/pull/1890
-{% set pytorch_version = "1.10.0" %}
 # see github.com/conda-forge/conda-forge.github.io/issues/1059 for naming discussion
 {% set torch_proc_type = "cuda" if cuda_compiler_version != "None" else "cpu" %}
 
@@ -11,12 +8,22 @@ package:
   name: {{ name|lower }}
   version: {{ version }}
 
-source:
+source:  run_constrained:
+    # 2022/02/05 hmaarrfk
+    # While conda packaging seems to allow us to specify
+    # constraints on the same package in different lines
+    # the resulting package doesn't have the ability to
+    # be specified in multiples lines
+    # This makes it tricky to use run_exports
+    # we add the GPU constraint in the run_constrained
+    # to allow us to have "two" constraints on the
+    # running package
+    - pytorch =*={{ torch_proc_type }}*
   url: https://github.com/mit-han-lab/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: a1cf3e8ecabb0f81cab7e14ed5ed0a31c8cb62b73d8ae172c50a779a82aae640
 
 build:
-  number: {{ number }}
+  number: 9
   skip: true  # [win or osx or cuda_compiler_version == "None" or cuda_compiler_version == "10.2"]
   string: py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version == "None"]
   string: py{{ CONDA_PY }}cuda{{ cuda_compiler_version|replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version != "None"]
@@ -32,18 +39,26 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != 'None']
     - sysroot_linux-64 ==2.17  # [linux64]
-    - pytorch ={{ pytorch_version }}={{ torch_proc_type }}*  # [build_platform != target_platform]
+    - pytorch ={{ pytorch }}={{ torch_proc_type }}*  # [build_platform != target_platform]
   host:
     - python
     - pip
     - sparsehash
     - pytorch {{ pytorch_version }}
-    - pytorch-cpu  # [cuda_compiler_version == "None"]
-    - pytorch-gpu  # [cuda_compiler_version != "None"]
+    - pytorch =*={{ torch_proc_type }}*
   run:
     - python
-    - pytorch-cpu  # [cuda_compiler_version == "None"]
-    - pytorch-gpu  # [cuda_compiler_version != "None"]
+  run_constrained:
+    # 2022/02/05 hmaarrfk
+    # While conda packaging seems to allow us to specify
+    # constraints on the same package in different lines
+    # the resulting package doesn't have the ability to
+    # be specified in multiples lines
+    # This makes it tricky to use run_exports
+    # we add the GPU constraint in the run_constrained
+    # to allow us to have "two" constraints on the
+    # running package
+    - pytorch =*={{ torch_proc_type }}*
 
 test:
   imports:
