--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,8 +29,8 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != 'None']
     - sysroot_linux-64 ==2.17  # [linux64]
-    - pytorch  # [build_platform != target_platform]
-    - pytorch ={{ pytorch }}={{ torch_proc_type }}*  # [build_platform != target_platform]
+    - pytorch
+    - pytorch ={{ pytorch }}={{ torch_proc_type }}*
   host:
     - python
     - pip
