Add tqdm as dependency

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,8 +41,10 @@ requirements:
     # The second gets the processor type
     - pytorch
     - pytorch =*={{ torch_proc_type }}*
+    - tqdm
   run:
     - python
+    - tqdm
   run_constrained:
     # additional run constraint to the one from the (version-only) run_export;
     # constraining the CPU builds to CPU pytorch isn't 100% necessary, but cleaner
