--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,11 @@
-{% set version = "1.4.0" %}
+{% set version = "2.0.0" %}
+{% set build = 0 %}
 
 # see github.com/conda-forge/conda-forge.github.io/issues/1059 for naming discussion
 {% set torch_proc_type = "cuda" if cuda_compiler_version != "None" else "cpu" %}
+{% if cuda_compiler_version != "None" %}
+{% set build = build + 200 %}
+{% endif %}
 
 package:
   name: torchsparse
@@ -9,19 +13,16 @@ package:
 
 source:
   url: https://github.com/mit-han-lab/torchsparse/archive/v{{ version }}.tar.gz
-  sha256: a1cf3e8ecabb0f81cab7e14ed5ed0a31c8cb62b73d8ae172c50a779a82aae640
+  sha256: 74e9cc0666487c54443b8fc7dbac4d6d7f9f5b747163c4f6b0a57c9e11c833ba
 
 build:
-  number: 18
+  number: {{ build }}
   skip: true  # [win]
   # as of pytorch 1.13, conda-forge only builds for CUDA 11.2+, see
   # https://github.com/conda-forge/conda-forge-pinning-feedstock/issues/3491
   skip: true  # [cuda_compiler_version in ("10.2", "11.0", "11.1")]
-  string: py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version == "None"]
-  string: py{{ CONDA_PY }}cuda{{ cuda_compiler_version|replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ torch_proc_type }}  # [cuda_compiler_version != "None"]
-  run_exports:
-    # ensure matching proc-type
-    - torchvision =*=*_{{ torch_proc_type }}
+  string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
+  string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [cuda_compiler_version == "None"]
 
 requirements:
   build:
