--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,18 @@
 {% set version = "2.0.0" %}
+{% set build = 0 %}
 
 # see github.com/conda-forge/conda-forge.github.io/issues/1059 for naming discussion
 {% set torch_proc_type = "cuda" if cuda_compiler_version != "None" else "cpu" %}
+
+{% if cuda_compiler_version != "None" %}
+{% set build = build + 200 %}
+{% endif %}
+
+{% if cuda_compiler_version in (None, "None", True, False) %}
+{% set cuda_major = 0 %}
+{% else %}
+{% set cuda_major = environ.get("cuda_compiler_version", "11.8").split(".")[0] | int %}
+{% endif %}
 
 package:
   name: torchsparse
@@ -14,7 +25,7 @@ source:
     - 0001-Add-missing-cuda_fp16-header.patch
 
 build:
-  number: 0
+  number: {{ build }}
   skip: true  # [win]
   # as of pytorch 1.13, conda-forge only builds for CUDA 11.2+, see
   # https://github.com/conda-forge/conda-forge-pinning-feedstock/issues/3491
