build with pytorch 1.13.1

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -79,7 +79,7 @@ requirements:
     # Leaving two dependencies helps rerender correctly
     # The first gets filled in by the global pinnings
     # The second gets the processor type
-    - pytorch
+    - pytorch 1.13.1
     - pytorch =*={{ torch_proc_type }}*
     - tqdm
   run:
